MDEV-25415 CASE function handles NULL inconsistently

SQL Standard specifies that a <simple case> should return the <result>
from the left-most <simple when clause> where the comparison evaluates
to TRUE.

That is, it should not stop comparing on NULLs